@@ -630,6 +630,42 @@ end_import
 
 begin_import
 import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|htrace
+operator|.
+name|Span
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|htrace
+operator|.
+name|Trace
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|htrace
+operator|.
+name|TraceScope
+import|;
+end_import
+
+begin_import
+import|import
 name|com
 operator|.
 name|google
@@ -7775,6 +7811,46 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+name|TraceScope
+name|scope
+init|=
+name|Trace
+operator|.
+name|startSpan
+argument_list|(
+literal|"FileSystem#createFileSystem"
+argument_list|)
+decl_stmt|;
+name|Span
+name|span
+init|=
+name|scope
+operator|.
+name|getSpan
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|span
+operator|!=
+literal|null
+condition|)
+block|{
+name|span
+operator|.
+name|addKVAnnotation
+argument_list|(
+literal|"scheme"
+argument_list|,
+name|uri
+operator|.
+name|getScheme
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+try|try
+block|{
 name|Class
 argument_list|<
 name|?
@@ -7818,6 +7894,15 @@ expr_stmt|;
 return|return
 name|fs
 return|;
+block|}
+finally|finally
+block|{
+name|scope
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 comment|/** Caching FileSystem objects */
 DECL|class|Cache
