@@ -122,6 +122,42 @@ name|InterfaceStability
 import|;
 end_import
 
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|htrace
+operator|.
+name|Span
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|htrace
+operator|.
+name|Trace
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|htrace
+operator|.
+name|TraceScope
+import|;
+end_import
+
 begin_class
 annotation|@
 name|InterfaceAudience
@@ -648,6 +684,72 @@ specifier|public
 name|FileStatus
 index|[]
 name|glob
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|TraceScope
+name|scope
+init|=
+name|Trace
+operator|.
+name|startSpan
+argument_list|(
+literal|"Globber#glob"
+argument_list|)
+decl_stmt|;
+name|Span
+name|span
+init|=
+name|scope
+operator|.
+name|getSpan
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|span
+operator|!=
+literal|null
+condition|)
+block|{
+name|span
+operator|.
+name|addKVAnnotation
+argument_list|(
+literal|"pattern"
+argument_list|,
+name|pathPattern
+operator|.
+name|toUri
+argument_list|()
+operator|.
+name|getPath
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+try|try
+block|{
+return|return
+name|doGlob
+argument_list|()
+return|;
+block|}
+finally|finally
+block|{
+name|scope
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+DECL|method|doGlob ()
+specifier|private
+name|FileStatus
+index|[]
+name|doGlob
 parameter_list|()
 throws|throws
 name|IOException
